--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
         - id: admin
           uri: http://localhost:8081
           predicates:
-            - Path=/api/v1/users/**, /api/v1/clients/**
+            - Path=/api/v1/users/**
 management:
   endpoints:
     web:
