--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'demo-event'
 include 'app-admin'
 include 'conf-api'
 include 'api-gateway'
+include 'auth-service'
+include 'clients-feign'
 
