[2023.03.06] Kafka Producer 공통모듈

--- a/build.gradle
+++ b/build.gradle
@@ -62,5 +62,6 @@ subprojects {
 project(':app-admin') {
     dependencies {
         implementation project(':conf-api')
+        implementation project(':kafka-producer')
     }
 }
