--- a/app-admin/src/main/resources/application.yml
+++ b/app-admin/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
 spring:
+  profiles:
+    include:
+      - producer
   datasource:
     url: jdbc:h2:tcp://localhost/~/test
     driverClassName: org.h2.Driver
