[2023.03.06] Kafka Producer 공통모듈

--- a/build.gradle
+++ b/build.gradle
@@ -65,3 +65,8 @@ project(':app-admin') {
         implementation project(':kafka-producer')
     }
 }
+project(':app-notification') {
+    dependencies{
+        implementation project(':kafka-consumer')
+    }
+}
