--- a/kafka-producer/build.gradle
+++ b/kafka-producer/build.gradle
@@ -1,3 +1,10 @@
+tasks.named("bootJar") {
+    enabled = false
+}
+tasks.named("jar") {
+    enabled = true
+}
 dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
+    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 }
