[2023.03.06] Kafka Producer/Consumer 공통모듈

--- a/kafka-consumer/build.gradle
+++ b/kafka-consumer/build.gradle
@@ -12,4 +12,5 @@ tasks.named("jar") {
 dependencies {
     api 'org.springframework.kafka:spring-kafka'
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.14.2'
 }
