--- a/app-admin/src/main/resources/application.yml
+++ b/app-admin/src/main/resources/application.yml
@@ -7,21 +7,33 @@ spring:
     include:
       - producer
   datasource:
-    url: jdbc:h2:tcp://localhost/~/test
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
+    url: jdbc:postgresql://localhost:5432/admin
+    username: jshan
+    password: password
   jpa:
     show_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/test
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password:
+#  h2:
+#    console:
+#      enabled: true
+#  jpa:
+#    show_sql: true
+#    hibernate:
+#      ddl-auto: create
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.H2Dialect
+#        format_sql: true
 logging:
   level:
     org:
