--- a/app-notification/src/main/resources/application.yml
+++ b/app-notification/src/main/resources/application.yml
@@ -6,25 +6,25 @@ spring:
   profiles:
     include:
       - consumer
-  datasource:
-    url: jdbc:h2:tcp://localhost/~/test
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
-  h2:
-    console:
-      enabled: true
-  jpa:
-    show_sql: true
-    hibernate:
-      ddl-auto: create
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
-        format_sql: true
-logging:
-  level:
-    org:
-      hibernate:
-        #        SQL: debug
-        type: trace
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/notification
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password:
+#  h2:
+#    console:
+#      enabled: true
+#  jpa:
+#    show_sql: true
+#    hibernate:
+#      ddl-auto: update
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.H2Dialect
+#        format_sql: true
+#logging:
+#  level:
+#    org:
+#      hibernate:
+#        #        SQL: debug
+#        type: trace
