--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
             - Path=/api/v1/users/**
           filters:
             - AuthenticationFilter
+        - id: auth-service
+          uri: http://localhost:8084
+          predicates:
+            - Path=/auth/**
 management:
   endpoints:
     web:
